--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,28 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+# Latex
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
